on mobile fixed

--- a/src/styles/SCSS/home/_home.scss
+++ b/src/styles/SCSS/home/_home.scss
@@ -6,11 +6,11 @@
 
 
 #home {
-  margin-bottom: 58vh;
+/*   margin-bottom: 58vh;
 
   @include cwh(321, 569) {
     margin-bottom: 42vh;
-  }
+  } */
 
   @include md {
     margin-bottom: 58vh;
